<resources>
    <string name="app_name">ExpensesDiary</string>

    <string name="login_title">Account Validation</string>
    <string name="sign_up_title">Sign In</string>
    <string name="manual_expense_reg_title">Manual Expense Register</string>
    <string name="category_title">Expense Category</string>
    <string name="manual_expense_register_title">Manual Expense Register</string>
    <string name="smart_expense_register_title">Smart Expense Register</string>
    <string name="user_name_hint">User Name</string>
    <string name="user_password_hint">User Password</string>
    <string name="user_repeat_password_hint">Confirm Password</string>
    <string name="btn_log">Validate</string>
    <string name="user_reg_btn">Register an account</string>
    <string name="sign_btn">Sign Up</string>
    <string name="confirm_password_not_same">Password do not match</string>
    <string name="reg_successful_hint">Registration of user was successful</string>
    <string name="user_edit_successful_hint">Editing of user was successful</string>
    <string name="user_existing_err">There is an user with the same name</string>
    <string name="btn_add_category">New Category</string>
    <string name="title_success">Success</string>
    <string name="title_warning">Warning</string>
    <string name="ok_btn">OK</string>
    <string name="empty_field_err">This field cannot be empty!</string>
    <string name="warning_title">Warning</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="error_title">Error</string>
    <string name="expenses_tracking_registered">You have successfully started your Expense Tracking!</string>
    <string name="expenses_tracking_edited">You have successfully edit your Expense Tracking!</string>
    <string name="statistics_spent_amount">Spent amount:\n</string>
    <string name="continue_btn">Continue</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>
    <string name="finish_btn">Finish</string>
    <string name="select_btn">Select</string>
    <string name="expense_start_title">Date of receiving income</string>
    <string name="expense_from_date">From date</string>
    <string name="expense_start_second_title">Fill your income</string>
    <string name="expense_start_second_income_hint">Income for selected period</string>
    <string name="expense_start_second_income_current_amount">Current amount of money</string>
    <string name="expense_adding_income_successful">Adding additional income was successful!</string>
    <string name="expense_start_dates_not_selected_err">Please select a date of receiving income!</string>
    <string name="review_expense_dates_err">To Date cannot be before From Date</string>
    <string name="manual_reg_food_item">Food/Drinks</string>
    <string name="manual_reg_alcohol_item">Alcohol</string>
    <string name="manual_reg_transport_item">Public Transport</string>
    <string name="manual_reg_fuel_item">Fuel</string>
    <string name="manual_reg_meds_item">Medical Drugs</string>
    <string name="manual_reg_smokes_item">Smokes</string>
    <string name="manual_reg_credit_item">Credit</string>
    <string name="manual_reg_bills_item">Bills</string>
    <string name="expense_tracking_not_started">You first have to start an Expense Tracking.Do you want to start it?</string>
    <string name="reg_expense_title">Register an Expense</string>
    <string name="manual_reg_expense_amount">Amount:</string>
    <string name="manual_reg_expense_description">Note(optional)</string>
    <string name="manual_reg_expense_reg_successfully">Expense registered successfully</string>
    <string name="category_name_hint">Category Name</string>
    <string name="category_description_hint">Category Description(optional)</string>
    <string name="crop_title">Crop Photo</string>
    <string name="device_camera_err">This device does not support image capturing.</string>
    <string name="category_saved_successfully">Category Info was saved successfully</string>
    <string name="sub_category_saved_successfully">SubCategory Info was saved successfully</string>
    <string name="category_delete">Delete Category</string>
    <string name="category_sure_deletion">Are you sure that you want to delete this category?\nThis could lead to data loss.</string>
    <string name="category_not_editable">This Category is not Editable</string>
    <string name="category_not_deletable">This Category is not Deletable</string>
    <string name="remember_me_check_box">Remember me</string>
    <string name="retrieve_acc">Account Retrievement</string>
    <string name="review_expense_title">Expense Tracking</string>
    <string name="review_expense_categories_title">Review Expense Categories</string>
    <string name="reg_expense_dialog_category_title">Category:</string>
    <string name="review_expense_info_title">Expense Info</string>
    <string name="review_expense_registered_date">From:</string>
    <string name="review_expense_note">Note:</string>
    <string name="progress_dialog_msg">Processing</string>
    <string name="csv_exported_successfully">CSV file is exported successfully in the Application Root Folder</string>
    <string name="csv_exported_err">CSV File was not exported successfully!\nProbably because there were no data for exporting.</string>
    <string name="forget_question_hint">Forget Question</string>
    <string name="forget_answer_hint">Forget Answer</string>
    <string name="validate_btn">Validate</string>
    <string name="no_such_user_err">There is no registered User associated with that name</string>
    <string name="user_retrievement_err">Incorrect answer</string>
    <string name="user_name">User Name:</string>
    <string name="user_password">User Password:</string>
    <string name="user_name_not_entered">First enter your account name</string>
    <string name="acc_retrievement_title">Account Retrievement</string>
    <string name="from_date">"From: "</string>
    <string name="to_date">"To:     "</string>
    <string name="ocr_scanning_title">Scanning</string>
    <string name="ocr_tip_title">Point to a receipt price</string>
    <string name="currency_saved">Currency was successfully saved</string>
    <string name="currency_selection_err">You have to first select a currency</string>
    <string name="parent_category_title">Parent Category:</string>
    <string name="sub_category_name_title">Subcategory Name</string>
    <string name="sub_category_description_title">Subcategory Description(optional)</string>
    <string name="category_duplication_err">Category with the same name already exists</string>
    <string name="sub_category_duplication_err">Sub Category with the same name already exists</string>
    <string name="stop_current_expense_tracking_msg">Are you sure you want to stop your current Expense Tracking?</string>
    <string name="receiving_income_err">Date of receiving income cannot be before current date</string>
    <string name="income_title">Income:</string>
    <string name="sub_category_title">Sub Categories</string>
    <string name="currency_title">Select Currency</string>
    <string name="reg_expense_dialog_sub_category_title">Sub Category:</string>
    <string name="export_csv_title">Select a period for CSV</string>
    <string name="sub_category_chooser_title">Select a Sub Category</string>
    <string name="category_filter">Filter by Category</string>
    <string name="select_image_hint">Select an image</string>
    <string name="receive_income_msg">Today is the date(or it has past) when you are receiving your income.\nDid you receive it?</string>
    <string name="income_tag">Income</string>
    <string name="date_filter_title">Date Filter</string>
    <string name="category_filter_title">Category Filter</string>
    <string name="days_sufix">days</string>
    <string name="day_sufix">day</string>
    <string name="to_date_err">To Date cannot be before From Date!</string>
    <string name="from_date_err">From Date and To Date cannot be the same!</string>
    <string name="income_description_monthly">Monthly Income</string>
    <string name="income_description_yearly">Yearly Income</string>
    <string name="context_dialog_edit_tracking">Edit Tracking</string>
    <string name="context_dialog_stop_tracking">Stop Tracking</string>
    <string name="context_dialog_export_csv">Export CSV</string>
    <string name="context_dialog_start_tracking">Start Tracking</string>
    <string name="context_dialog_edit_balance">Edit Balance</string>
    <string name="context_dialog_new_category">New Category</string>
    <string name="context_dialog_review_categories">Review Categories</string>
    <string name="context_dialog_date_filter">Date Filter</string>
    <string name="context_dialog_review_expenses">Review Expenses</string>
    <string name="day_of_receiving_income_sufix">th every month</string>
    <string name="year_of_receiving_income_suffix">every year</string>
    <string name="balance_title">Fill your Balance</string>
    <string name="balance_hint">Balance</string>
    <string name="balance_info_title">Balance:</string>
    <string name="add_sub_category_btn">Add SubCategory</string>
    <string name="expense_tracking_title">Expense Tracking</string>
    <string name="income_date_title">Income Date:</string>
    <string name="days_till_income_title">Days till Income:</string>
    <string name="monthly_income_title">Income:</string>
    <string name="expense_trackng_not_set_up">Not set up yet!</string>
    <string name="categories_title">Categories</string>
    <string name="statistics_title">Statistics</string>
    <string name="last_two_registered_expenses_title">Last 2 registered expenses</string>
    <string name="income_register_btn">Income Register</string>
    <string name="filter_range_title">Filter Range:</string>
    <string name="category_expenses_title">Category Expenses</string>
    <string name="one_month_title">One month</string>
    <string name="three_month_title">Three months</string>
    <string name="six_month_title">Six months</string>
    <string name="nine_month_title">Nine months</string>
    <string name="twelve_month_title">Twelve months</string>
    <string name="expenses_title">Expenses:</string>
    <string name="analyze_expenses_title">Analyze Expenses</string>
    <string name="export_btn">Export</string>
    <string name="apply_btn">Apply</string>
    <string name="income_date">Receiving Income Date</string>
    <string name="registered_categories_suffix">Registered Categories</string>
    <string name="pie_chart_legend">Legend</string>
    <string name="expense_edit">Edit Expense</string>
    <string name="expense_delete">Delete Expense</string>
    <string name="expense_location">View Location</string>
    <string name="selected_chart_item_title">Selected Chart Item</string>
    <string name="confirm_exit_app">Are you sure that you want to exit the application?</string>
    <string name="receiving_income_method_title">Receiving income method</string>
    <string name="receiving_income_monthly_method">Every month</string>
    <string name="receiving_income_yearly_method">Every year</string>
    <string name="options_menu_title">Options Menu</string>
    <string name="edit_account_credentials_title">Edit account credentials</string>
    <string name="edit_account_btn">Edit Account</string>
    <string name="change_selected_currency_title">Change selected currency</string>
    <string name="change_currency_btn">Change Currency</string>
    <string name="currencies_download_err">Problem occurred when trying to get the latest currencies rates!Please check your internet connection.</string>
</resources>