<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient"
    android:orientation="vertical"
    android:paddingTop="20dp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginRight="20dp"
      android:layout_marginLeft="20dp"
      >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgetQuestionTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="8dp"
        android:theme="@style/AppTheme"
        >

      <EditText
          android:id="@+id/forgetQuestion"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:focusable="false"
          android:hint="@string/forget_question_hint"
          android:inputType="text"
          android:textColor="@color/button_text_color"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgetAnswerTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="8dp"
        android:theme="@style/AppTheme"
        >

      <EditText
          android:id="@+id/forgetAnswer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:hint="@string/forget_answer_hint"
          android:inputType="text"
          android:textColor="@color/button_text_color"
          />
    </android.support.design.widget.TextInputLayout>

    <trac.portableexpensesdiary.basecomponents.AntiMonkeyButton
        android:id="@+id/validateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:padding="10dp"
        android:textSize="@dimen/textsize"
        fancy:fb_borderColor="@color/button_text_color"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="@color/transparent"
        fancy:fb_focusColor="#5577bd"
        fancy:fb_fontIconSize="25sp"
        fancy:fb_iconPosition="right"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/validate_btn"
        fancy:fb_textColor="@color/button_text_color"
        style="?android:attr/buttonStyleSmall"
        />

  </LinearLayout>
</ScrollView>