<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userNameTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user_name_hint"
                android:inputType="text"
                android:textColor="@color/button_text_color" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPasswordTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/button_text_color" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userPasswordConfirmTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/confirmUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/user_repeat_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/button_text_color" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userForgetQuestionTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/userForgetQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/forget_question_hint"
                android:inputType="text"
                android:textColor="@color/button_text_color" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userForgetAnswerTxtLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="8dp"
            android:theme="@style/AppTheme">

            <EditText
                android:id="@+id/userForgetAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/forget_answer_hint"
                android:inputType="text"
                android:textColor="@color/button_text_color" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <trac.portableexpensesdiary.basecomponents.AntiMonkeyButton
                android:id="@+id/cancelBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="@dimen/textsize"
                fancy:fb_borderColor="@color/button_text_color"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/transparent"
                fancy:fb_focusColor="#5577bd"
                fancy:fb_fontIconSize="25sp"
                fancy:fb_radius="5dp"
                fancy:fb_text="Back"
                fancy:fb_textColor="@color/button_text_color"
                fancy:fb_iconPosition="top"
                fancy:fb_iconResource="@drawable/ic_clear_white_48dp"
                fancy:fb_textGravity="center_horizontal"
                />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <trac.portableexpensesdiary.basecomponents.AntiMonkeyButton
                android:id="@+id/signBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="@dimen/textsize"
                fancy:fb_borderColor="@color/button_text_color"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/transparent"
                fancy:fb_focusColor="#5577bd"
                fancy:fb_fontIconSize="25sp"
                fancy:fb_radius="5dp"
                fancy:fb_text="@string/sign_btn"
                fancy:fb_textColor="@color/button_text_color"
                fancy:fb_iconPosition="top"
                fancy:fb_iconResource="@drawable/ic_done_white_48dp"
                fancy:fb_textGravity="center_horizontal"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>